# mtuci-rs

./: Cargo.toml  delete.rs  homework1  hw4.rs  laba1  laba2  laba4_app.py  laba5_account.html  laba5_app.py  laba5_login.html  laba5_registration.html  laba6  laba8  main.py  погода.py
ch10/: Cargo.toml
ch10/src/: 10-10.rs  10-11.rs  10-12.rs  10-14.rs  10-15.rs  10-16.rs  10-17.rs  10-18.rs  10-19.rs  10-2.rs  10-20.rs  10-21.rs  10-22.rs  10-23.rs  10-25(1).rs  10-25.rs  10-3.rs  10-4.rs  10-5.rs  10-6.rs  10-7.rs  10-8.rs  10-9.rs  main.rs
ch11/: Cargo.toml
ch11/src/: 11-10.rs  11-11.rs  11-12.rs  11-2.rs  11-3.rs  11-4.rs  11-5.rs  11-6.rs  11-7.rs  11-8.rs  11-9.rs  main.rs
ch12/: Cargo.toml
ch12/src/: 12-10.rs  12-11.rs  12-12.rs  12-13.rs  12-14.rs  12-15.rs  12-16.rs  12-17.rs  12-18.rs  12-19.rs  12-2.rs  12-20.rs  12-21.rs  12-22.rs  12-23.rs  12-4.rs  12-5.rs  12-6.rs  12-7.rs  12-8.rs  12-9.rs  main.rs
ch13/: Cargo.toml
ch13/src/: 13-10.rs  13-11.rs  13-12.rs  13-13.rs  13-14.rs  13-15.rs  13-16.rs  13-17.rs  13-18.rs  13-19.rs  13-2.rs  13-20.rs  13-22.rs  13-3.rs  13-4.rs  13-5.rs  13-6.rs  13-7.rs  13-8.rs  13-9.rs  main.rs
ch14/src/: main.rs
ch15/: Cargo.toml
ch16/: Cargo.toml
ch16/src/: 16-10.rs  16-11.rs  16-12.rs  16-13.rs  16-14.rs  16-15.rs  16-2.rs  16-3.rs  16-4.rs  16-5.rs  16-6.rs  16-7.rs  16-8.rs  16-9.rs  main.rs
ch2/: Cargo.toml
ch4/: Cargo.toml
ch5/: Cargo.toml
ch5/src/: 5-10.rs  5-11.rs  5-12.rs  5-13.rs  5-14.rs  5-15.rs  5-16.rs  5-2.rs  5-3.rs  5-4.rs  5-5.rs  5-6.rs  5-7.rs  5-8.rs  5-9.rs  main.rs
ch6/: Cargo.toml
ch6/src/: 6-2.rs  6-3.rs  6-4.rs  6-5.rs  6-6.rs  main.rs
ch7/: Cargo.toml
ch7/src/: 7-10.rs  7-11.rs  7-12.rs  7-13.rs  7-15.rs  7-16.rs  7-17.rs  7-18.rs  7-19.rs  7-2.rs  7-20.rs  7-21.rs  7-3.rs  7-4.rs  7-5.rs  7-6.rs  7-7.rs  7-8.rs  7-9.rs  (+1 more)
ch8/: Cargo.toml
ch9/: Cargo.toml
hw2/: Cargo.toml
(+40 files in other folders)
