[package]
name = "ch2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "21.rs"
path = "src/21.rs"

[[bin]]
name = "22"
path = "src/22"

[[bin]]
name = "23.rs"
path = "src/23.rs"

[[bin]]
name = "l1.rs"
path = "src/l1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
